[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/rock.gd" type="Script" id=1]
[ext_resource path="res://assets/img/meteorite_1.png" type="Texture" id=2]
[ext_resource path="res://scenes/explosion.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[node name="rock" type="RigidBody2D" groups=[
"rocks",
]]
physics_material_override = SubResource( 1 )
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="rock_spr" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="rock_coll" type="CollisionShape2D" parent="."]

[node name="explosion" parent="." instance=ExtResource( 3 )]
[connection signal="animation_finished" from="explosion/explosion_animation" to="." method="_on_explosion_animation_animation_finished"]

[editable path="explosion"]
